--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -74,6 +74,7 @@
                 android:textColor="@color/black_gray"
                 />
             <Button
+                android:id="@+id/site_btn"
                 android:layout_width="120dp"
                 android:layout_height="40dp"
                 android:text="추천 사이트"
@@ -83,8 +84,8 @@
                 />
          </LinearLayout>
     </LinearLayout>
+
     <ScrollView
-        xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         android:fillViewport="true"
